# colabcliproject

./: .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
docs/plans/: 2026-02-22-colab-push.md
src/colab_push/: __init__.py  auth.py  cli.py  colab.py  config.py  drive.py  notebook.py
src/tocolab/: __init__.py  auth.py  cli.py  colab.py  config.py  drive.py  output.py
tests/: test_auth.py  test_cli.py  test_colab.py  test_config.py  test_drive.py  test_e2e.py  test_errors.py  test_notebook.py  test_pull.py
