[project]
name = "colab-push"
version = "0.1.0"
description = "Push code to Google Colab from the command line"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "google-auth-oauthlib>=1.0.0",
    "google-api-python-client>=2.0.0",
    "nbformat>=5.0.0",
    "pyperclip>=1.8.0",
]

[project.scripts]
colab-push = "colab_push.cli:app_entry"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = ["pytest>=7.0.0"]
